# turnpikesolver

./: LICENSE  README  README.md
TurnpikeMM/: setup.py
TurnpikeMM/src/TurnpikeMM/: TurnpikeMM.cpp
pybind-setup/: CMakeLists.txt  library.cpp
sinkhorn-turnpike/: eval_pd_test.py  eval_turnpike_test.py  generate_partial_digestion.py  get_points.py  iterative_wasserstein_solver.py  main.py  multiscale_mask_solver.py  multiscale_solver.py  run_multiscale.py  run_partial_digestion_test.py  run_pd_test_old.py  run_turnpike_test.py  sinkhorn.py  utils.py  wasserstein_solver.py
turnpike-solver-src/: MM_utils.py  solver.cpp  solver.py  turnpike_utils.py
turnpike-solver-tests/: run-synthetic.sh  run-turnpike-instance.py  worker.py
